hphp/hack/test/typecheck/sub_dep_type_variance_check.php.exp
File "sub_dep_type_variance_check.php", line 32, characters 3-22:
Invalid assignment (Typing[4110])
  File "sub_dep_type_variance_check.php", line 30, characters 15-25:
  Expected `C<arraykey>`
  File "sub_dep_type_variance_check.php", line 32, characters 18-18:
  But got `C<int>`
  File "sub_dep_type_variance_check.php", line 32, characters 18-18:
    where the class `C` was referenced here
  File "sub_dep_type_variance_check.php", line 30, characters 15-15:
  Since `C` is not final
  File "sub_dep_type_variance_check.php", line 32, characters 18-18:
  this might not be a `C`
